[package]
name = "cntr-fuse"
edition = "2018"
version = "0.4.0"
authors = ["Jörg Thalheim <joerg@thalheim.io>"]
description = "Rust library for filesystems in userspace (FUSE) (fork with functionality needed for the cntr project)"
homepage = "https://github.com/Mic92/cntr-fuse"
repository = "https://github.com/Mic92/cntr-fuse"
readme = "README.md"
keywords = ["fuse", "filesystem", "system", "bindings"]
categories = ["api-bindings", "filesystem"]
license = "MIT"

[workspace]
members = [".", "fuse-abi", "fuse-sys"]

[badges]
cirrus-ci = { repository = "zargony/fuse-rs" }
github = { repository = "zargony/fuse-rs" }

[dependencies]
cntr-fuse-abi = { path = "./fuse-abi", version = "=0.4.0" }
cntr-fuse-sys = { path = "./fuse-sys", version = "=0.4.0" }
libc = "0.2.51"
log = "0.4.6"

[dev-dependencies]
env_logger = "0.6.0"

[features]
default = ["libfuse"]
libfuse = [ "cntr-fuse-sys/libfuse" ]

[[example]]
name = "hello"
required-features = ["libfuse"]

[[example]]
name = "null"
required-features = ["libfuse"]
