[package]
name = "cntr-fuse-sys"
edition = "2018"
version = "0.4.0"
authors = ["Jörg Thalheim <joerg@thalheim.io>"]
description = "FFI bindings to the FUSE kernel interface and libfuse"
documentation = "https://docs.rs/fuse"
homepage = "https://github.com/Mic92/cntr-fuse"
repository = "https://github.com/Mic92/cntr-fuse"
readme = "README.md"
keywords = ["fuse", "filesystem", "system", "bindings"]
categories = ["external-ffi-bindings", "filesystem", "os::unix-apis"]
license = "MIT"
build = "build.rs"
links = "fuse"

[build-dependencies]
pkg-config = "0.3.14"

[dependencies]

[features]
libfuse = []
